fixed the font size on mobile

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -28,7 +28,7 @@ body {
   font-family: "chillhopscript", Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
-  font-size: 9em;
+  font-size: 20rem;
   margin: 0;
 }
 
@@ -36,6 +36,7 @@ body {
   margin-top: 0;
   font-family: "Open Sans Condensed", sans-serif;
   letter-spacing: 0.2em;
+  font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: normal;
 }
@@ -59,6 +60,23 @@ body {
   animation: shine 2s forwards, flicker 3s infinite;
 }
 
+.flicker {
+  animation: shine 2s forwards, blink 3s 2s infinite;
+}
+
+.fast-flicker {
+  animation: shine 2s forwards, blink 10s 1s infinite;
+}
+
+@media screen and (min-width: 576px) {
+.hero-text h1{
+  font-size: 12rem;
+}
+.hero-text h2{
+  font-size: 2rem;
+}
+
+
 @keyframes blink {
   0%,
   22%,
@@ -79,14 +97,6 @@ body {
     color: #ff2483;
     text-shadow: none;
   }
-}
-
-.flicker {
-  animation: shine 2s forwards, blink 3s 2s infinite;
-}
-
-.fast-flicker {
-  animation: shine 2s forwards, blink 10s 1s infinite;
 }
 
 @keyframes shine {
